# embedded-ai-validation-platform

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  firmware.yml
benchmarks/: README.md
benchmarks/suites/: inference-sim.yaml  memory-esp32.yaml  robustness-faults.yaml
ci/: README.md  check_docs.py
configs/: default.yaml  sim.yaml  stm32h7.yaml
dashboard/: README.md
dashboard/python/: app.py
datasets/: README.md
datasets/imu/: imu_aggressive.csv  imu_aggressive.metadata.json  imu_run1.csv  imu_run1.metadata.json  imu_static_biased.csv  imu_static_biased.metadata.json
docs/: architecture.md  benchmarking.md  config-reference.md  developer-guide.md  getting-started.md  hardware-support.md  migration-plan.md  plugin-development.md  usage.md
examples/: README.md  add_hardware_target.py  benchmark_mobilenet.py  firmware_smoke_test.py  hil_fault_testing.py  sensor_fusion_imu.py
firmware/: README.md  platformio.ini
firmware/include/eaiv/: board.h  complementary_filter.h  imu.h
firmware/src/: main.cpp
hil/: README.md
sensor_fusion/: README.md
src/eaiv/: __init__.py  cli.py  config.py
src/eaiv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/eaiv/benchmarks/: __init__.py  memory.py
src/eaiv/core/: baseline.py  orchestrator.py  pipeline.py  regression.py  reporter.py  results.py
src/eaiv/dashboard/: __init__.py  data.py
src/eaiv/datasets/: __init__.py  generator.py  metadata.py
src/eaiv/firmware/: flasher.py  serial_io.py  tester.py
src/eaiv/hil/: __init__.py  faults.py  replay.py  simulator.py  suite.py
src/eaiv/plugins/: __init__.py  benchmarks.py  sensors.py  targets.py
src/eaiv/power/: __init__.py  monitor.py
src/eaiv/rt_perf/: latency.py  profiler.py
src/eaiv/sensor_fusion/: experiments.py  fusion.py
src/eaiv/targets/: __init__.py  base.py  jlink.py  qemu.py  serial.py
src/eaiv/telemetry/: __init__.py  adapter.py  collector.py  protocol.py  provider.py
src/eaiv/tinyml/: benchmark.py  metrics.py  model_loader.py
tests/: test_baseline.py  test_benchmarks.py  test_dashboard_data.py  test_datasets.py  test_firmware.py  test_fusion.py  test_hil.py  test_orchestrator.py  test_pipeline.py  test_plugins.py  test_regression.py  test_reporter.py  test_rt_perf.py  test_telemetry.py  test_tinyml.py
